--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "#/*": ["./src/*"]
-    }
-  }
+	"compilerOptions": {
+		"paths": {
+			"#/*": ["./src/*"],
+			"#def": ["./src/typedef.js"]
+		}
+	}
 }
