--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-masonry-css": "1.0.16",
+    "react-photo-view": "1.2.7",
     "react-responsive-masonry": "2.7.1"
   },
   "devDependencies": {
