--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "daisyui": "^5.0.43",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "tailwind-merge": "3.3.1",
     "tailwindcss": "^4"
   }
 }
