feat: Refactor sections and enhance accessibility with new components and updated metadata

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"paths": {
 			"#/*": ["./src/*"],
-			"#def": ["./src/typedef.js"]
+			"#def": ["./src/typedef.jsdoc.js"]
 		}
 	}
 }
