--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/nodejs": "5.0.2",
     "@heroicons/react": "2.2.0",
     "@hookform/resolvers": "5.1.1",
     "next": "15.3.3",
@@ -18,7 +19,8 @@
     "react-hook-form": "7.58.1",
     "react-masonry-css": "1.0.16",
     "react-photo-view": "1.2.7",
-    "zod": "3.25.67"
+    "zod": "3.25.67",
+    "zustand": "5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
